--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,10 +19,24 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: "1.24"
+        go-version: "1.25"
 
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
+    # Test the main module
+    - name: Test main module
       run: go test -v ./...
+
+    # Test each submodule under store/*
+    - name: Test submodules
+      run: |
+        for dir in ./store/*; do
+          if [ -f "$dir/go.mod" ]; then
+            echo "===> Testing $dir"
+            cd "$dir"
+            go test -v ./...
+            cd - >/dev/null
+          fi
+        done
+
+
+
+
